<resources>
    <string name="app_name">Vroomrr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu Strings -->
    <string name="menu_home">Find cars</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_car">My cars</string>
    <string name="menu_info">Car Info</string>
    <string name="menu_settings">Settings</string>

    <!-- Placeholder Text -->
    <string name="placeholder_username">Gebruikersnaam</string>
    <string name="placeholder_password">Wachtwoord</string>
    <string name="placeholder_license">Kenteken</string>
    <string name="placeholder_name">Naam</string>
    <string name="placeholder_message">Message</string>
    <string name="placeholder_sender">Sender</string>

    <!-- Button Strings -->
    <string name="button_register">Registreren</string>
    <string name="button_login">Inloggen</string>
    <string name="button_save">Save</string>
    <string name="button_add">Add</string>

    <!-- Image Descriptions -->
    <string name="swipe_image_red">Dislike</string>
    <string name="swipe_image_orange">Doubt</string>
    <string name="swipe_image_green">Like</string>
    <string name="vehicle_image">Vehicle Image</string>

    <!-- Title Strings -->

    <!-- General Strings -->
    <string name="SessionId">Session-Id</string>
    <string name="UserId">UserId</string>
    <string name="Username">Username</string>

    <!-- Settings Strings -->
    <string name="settings_build_year_min">bouwjaar min</string>
    <string name="settings_build_year_max">bouwjaar max</string>
    <string name="settings_horsepower_min">paardenkracht min</string>
    <string name="settings_fuel_types">brandstof</string>
    <string name="settings_brands">merken</string>
    <string name="settings_colors">kleuren</string>

    <!-- ImageView ContentDescription String -->
    <string name="car_image">Image of the car</string>
    <string name="car_name">Name of the car</string>
    <string name="car_license">kenteken</string>
    <string name="car_deletebtn">Image of delete icon</string>

    <string name="image_chat">Image of chat</string>
    <string name="text_chat">Text of chat</string>

    <!-- Car Activity-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_logout">Logout</string>
    <string name="button_delete">delete</string>
    <string name="car_color">kleur</string>
    <string name="car_horsepower">pk</string>
    <string name="car_build_year">bouwjaar</string>
    <string name="car_fuel_types">brandstof</string>
    <string name="car_description">Info</string>
    <string name="car_selected">Selecteer</string>

</resources>