<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_swipe">

    <fragment
        android:id="@+id/nav_swipe"
        android:name="com.example.vroomrr.ui.swipe.SwipeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_swipe" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.vroomrr.ui.chat.ChatListFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.vroomrr.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_car"
        android:name="com.example.vroomrr.ui.car.CarListFragment"
        android:label="@string/menu_car"
        tools:layout="@layout/fragment_car_list" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.vroomrr.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>