<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_main"
    tools:context=".ui.swipe.SwipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

    <EditText
        android:id="@+id/username_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:autofillHints="@string/placeholder_username"
        android:hint="@string/placeholder_username"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:autofillHints="@string/placeholder_password"
        android:hint="@string/placeholder_password"
        app:layout_constraintTop_toBottomOf="@id/username_login"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/colorAccent"
        android:text="@string/button_login"
        app:layout_constraintTop_toBottomOf="@id/password_login" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Click Here to Register"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>