<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.swipe.SwipeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_build_year_min"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/settings_build_year_min"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:layout_toStartOf="@+id/build_year_min"
                android:textSize="20sp"/>

            <NumberPicker
                android:id="@+id/build_year_min"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_build_year_max"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:layout_below="@+id/card_build_year_min">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:layout_toStartOf="@+id/build_year_max"
                android:textSize="20sp"
                android:text="@string/settings_build_year_max" />
            <NumberPicker
                android:id="@+id/build_year_max"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_horsepower_min"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:layout_below="@+id/card_build_year_max">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_toStartOf="@+id/horsepower_min"
                android:text="@string/settings_horsepower_min"/>

            <NumberPicker
                android:id="@+id/horsepower_min"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_fuel_types"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:layout_below="@+id/card_horsepower_min">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/settings_fuel_types"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_toStartOf="@+id/fuel_types"/>
            <com.example.vroomrr.MultipleSelectionSpinner
                android:id="@+id/fuel_types"
                android:layout_width="150dp"
                android:textAlignment="center"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_brands"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:layout_below="@+id/card_fuel_types">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/settings_brands"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_toStartOf="@+id/brands" />
            <com.example.vroomrr.MultipleSelectionSpinner
                android:id="@+id/brands"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_colors"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:layout_below="@+id/card_brands">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/settings_colors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_toStartOf="@+id/colors"/>
            <com.example.vroomrr.MultipleSelectionSpinner
                android:id="@+id/colors"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>

