<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.car.CarActivity"
    android:id="@+id/car_viewCar"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <android.widget.Toolbar
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="?attr/actionBarSize"
            android:title=""
            android:background="@color/colorPrimary"
            android:id="@+id/car_toolbar" />

        <ImageButton
            android:id="@+id/car_menu_button"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/menu_settings"
            android:src="@drawable/ic_baseline_handyman_24"
            android:scaleType="center"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/car_carImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/car_image"
            />

        <TextView
            android:id="@+id/car_licenseplate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hello_blank_fragment" />

        <TextView
            android:id="@+id/car_brand"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hello_blank_fragment" />

        <TextView
            android:id="@+id/car_model"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hello_blank_fragment" />

        <TextView
            android:id="@+id/car_mileage"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hello_blank_fragment" />

    </LinearLayout>
</LinearLayout>